# aws-rl-env-fork2

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  __init__.py  aws_rl_env_colab.ipynb  blog.md  client.py  entrypoint.sh  inference-complete.py  inference-old.py  inference.py  models.py  notes.txt  openenv.yaml  pyproject.toml  train_grpo.py  train_grpo_lora_final.ipynb  validate-submission.sh
aws_infra/: pyproject.toml
aws_infra/aws_infra/: __main__.py  app.py
aws_infra/aws_infra/core/: router.py
aws_infra/aws_infra/services/: acm.py  alb.py  apigateway.py  apigateway_v1.py  athena.py  cloudwatch.py  cloudwatch_logs.py  cognito.py  dynamodb.py  ec2.py  ecs.py  efs.py  elasticache.py  emr.py  eventbridge.py  firehose.py  glue.py  iam_sts.py  kinesis.py  lambda_svc.py  rds.py  route53.py  s3.py  secretsmanager.py  ses.py  ses_v2.py  sns.py  sqs.py  ssm.py  stepfunctions.py  waf.py
aws_infra/aws_infra/services/cloudformation/: __init__.py  changesets.py  engine.py  handlers.py  helpers.py  provisioners.py  stacks.py
aws_infra/ministack/: app.py
aws_infra/ministack/services/: acm.py  alb.py  apigateway.py  apigateway_v1.py  appconfig.py  appsync.py  athena.py  autoscaling.py  cloudfront.py  cloudwatch.py  cloudwatch_logs.py  codebuild.py  cognito.py  dynamodb.py  ec2.py  ecr.py  ecs.py  efs.py  eks.py  elasticache.py  emr.py  eventbridge.py  firehose.py  glue.py  iam.py  kinesis.py  kms.py  lambda_svc.py  pipes.py  rds.py  rds_data.py  route53.py  s3.py  s3files.py  scheduler.py  secretsmanager.py  servicediscovery.py  ses.py  ses_v2.py  sns.py  (+7 more)
aws_infra/ministack/services/cloudformation/: __init__.py
compare/: README.md  compare_base_vs_sft.ipynb  compare_base_vs_sft_with_outputs.ipynb
data/: README.md  build_sft_dataset.py  eval_lm_studio_models.py  upload_sft_to_hf.py
data/sft/: MODEL_EVALUATION.md  aws_rl_sft.reserve.jsonl  aws_rl_sft.train.jsonl  aws_rl_sft.val.jsonl  dataset_stats.json  deepseek_r1_rerun.json  model_eval_full.json  model_eval_full.txt
scripts/: README.md  TestMultipleConnects.ipynb  generate_blog_figures.py  grpo_pool.py  grpo_train.py
server/: README.md  __init__.py  app.py  aws_rl_env_environment.py
server/services/: aws_backend.py  aws_strategy.py  chaos_engine.py  curriculum.py  drift_engine.py  environment_designer.py  environment_strategy.py  episode_context.py  episode_tracker.py  hint_provider.py  resource_verifier.py  simulator_strategy.py  task_grader.py  task_solutions.py
server/services/tasks/: advanced.yaml  beginner.yaml  drift.yaml  expert.yaml  intermediate.yaml  warmup.yaml
server/static/css/: style.css
server/static/js/: app.js
server/templates/: index.html
tests/: test_advanced_tasks.py  test_aws_rl_env_environment.py  test_drift_engine.py  test_drift_tasks.py  test_environment_designer.py  test_episode_context.py  test_episode_tracker.py  test_expert_tasks.py  test_grpo_pool.py  test_hint_provider.py  test_intermediate_tasks.py  test_pool.py  test_resource_verifier.py  test_task_grader.py  test_warmup_tasks.py
tests_tasks/: test_advanced_tasks.py  test_beginner_tasks.py  test_drift_tasks.py  test_expert_tasks.py  test_intermediate_tasks.py  test_warmup_tasks.py
train/: README.md  train_grpo_lora.ipynb  train_grpo_lora_with_outputs.ipynb  train_sft_lora.ipynb  train_sft_lora_with_console_outputs.ipynb
