# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-aws_rl_env"
version = "0.1.0"
description = "Aws Rl Env environment for OpenEnv"
requires-python = "==3.12.*"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "ministack",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.0",
]

train = [
    "jupyterlab",
    # .venv/bin/python -m ipykernel install --user --name aws-rl-env --display-name "Python (aws-rl-env)"
    "ipykernel",
    "ipywidgets>=8.1.0",
    "datasets>=4.8.4",
    "huggingface-hub>=1.9.0",
]


[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m aws_rl_env.server.app
server = "aws_rl_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["aws_rl_env", "aws_rl_env.server"]
package-dir = { "aws_rl_env" = ".", "aws_rl_env.server" = "server" }

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
exclude = ["aws_infra/"]

[tool.uv.sources]
ministack = { path = "aws_infra", editable = true }

[tool.mypy]
files = ["*.py", "server/"]
exclude = ["aws_infra/"]
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "."
