[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-infra"
version = "1.1.24"
description = "Local AWS emulator"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "uvicorn[standard]>=0.30.6",
    "httptools>=0.6.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
full = ["duckdb>=0.10.0", "docker>=7.0.0"]

[project.scripts]
aws_infra = "aws_infra.app:main"

[tool.setuptools.packages.find]
include = ["aws_infra*"]
